# TinyRPC

./: .gitignore  CMakeLists.txt
conf/: tiny_rpc.xml
include/: Application.hpp  Config.hpp  Logger.hpp  RpcServer.hpp
include/rpc/: RpcChannel.hpp  RpcCodec.hpp  RpcController.hpp
src/: Application.cpp  AsyncLogging.cpp  Config.cpp  Logger.cpp  RpcChannel.cpp  RpcCodec.cpp  RpcServer.cpp  main.cpp  test_cilent.cpp
